--- a/main.css
+++ b/main.css
@@ -1,13 +1,113 @@
-#url_input-area {
-	margin: 20px auto;
-	width: 700px;
-	max-width: 80vw;
-	height: 400px;
+body {
+	margin: 0;
+	padding: 0;
+	font-family: sans-serif;
 }
 
-#url_output-area {
-	margin: 20px auto;
-	width: 700px;
-	max-width: 80vw;
+nav {
+	background: #bbb;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 50px;
+	margin: 0 0 40px 0;
+}
+nav h1 {
+	margin: 0px;
+}
+
+textarea {
+	font-size: 18px;
+}
+
+.url_container {
+	max-width: 95vw;
+	width: 900px;
+	margin: 0 auto;
+}
+.url_input-container {
+	display: flex;
+	flex-direction: column;	
+	justify-content: center;
+	align-items: center;
+}
+.textbox_label {
+	max-width: 100%;
+	width: 900px;
+}
+.url_input-container .textbox_label h2{
+	margin: 0 0 0 0;
+	width: 100%;
+}
+.textbox_label h5{
+	margin: 0;
+	font-weight: 200;
+	font-style: italic;
+	padding: 2px 0 10px 0;
+}
+#url_input-area {
+	margin: 0px auto 0 auto;
+	width: 900px;
+	max-width: 100%;
+	min-width: 100%;
 	height: 400px;
 }
+#url_input-area:focus {
+	outline: none;
+}
+#url_submit-btn {
+	width: 100%;
+	height: 40px;
+	padding: 0px;
+	margin: 4px auto;
+	background: #777;
+	border-radius: 5px;
+	box-shadow: 2px 2px 4px #444;
+	border: none;
+	color: white;
+	font-weight: 500;
+	font-size: 14px;
+	letter-spacing: 2px;
+	text-transform: uppercase;
+	transition: all 900ms;
+	cursor: pointer;
+}
+#url_submit-btn:hover {
+	transform: translateY(-3px);
+	box-shadow: 2px 4px 4px #333;
+}
+#url_submit-btn:focus {
+	outline: none !important;
+}
+.submit_error-btn {
+	background: #fa3a3a!important;
+}
+.submit_success-btn {
+	background: #48a648 !important;
+}
+
+
+
+.url_output-container {
+	display: flex;
+	flex-direction: column;	
+	justify-content: center;
+	align-items: center;
+}
+.url_output-container .textbox_label h2{
+	margin: 30px 0 5px 0;
+	width: 100%;
+}
+#url_output-area {
+	margin: 0px auto 20px auto;
+	width: 900px;
+	max-width: 100%;
+	height: 400px;
+}
+#url_output-area:focus {
+	outline: none !important;
+}
+
+
+
+
