--- a/main.css
+++ b/main.css
@@ -2,18 +2,22 @@ body {
 	margin: 0;
 	padding: 0;
 	font-family: sans-serif;
+	overflow-x: hidden;
 }
 
 nav {
-	background: #bbb;
+	background: #555;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	height: 50px;
 	margin: 0 0 40px 0;
+	color: #fff;
+	box-shadow: 0px 2px 3px #000;
 }
 nav h1 {
 	margin: 0px;
+	cursor: default;
 }
 
 textarea {
@@ -34,6 +38,10 @@ textarea {
 .textbox_label {
 	max-width: 100%;
 	width: 900px;
+	position: relative;
+	padding-bottom: 8px;
+	margin-bottom: 15px;
+	cursor: default;
 }
 .url_input-container .textbox_label h2{
 	margin: 0 0 0 0;
@@ -51,6 +59,12 @@ textarea {
 	max-width: 100%;
 	min-width: 100%;
 	height: 400px;
+	padding: 10px;
+}
+#url_input-area::placeholder {
+	color: #999;
+	font-style: italic;
+	font-weight: 100;
 }
 #url_input-area:focus {
 	outline: none;
@@ -86,8 +100,6 @@ textarea {
 	background: #48a648 !important;
 }
 
-
-
 .url_output-container {
 	display: flex;
 	flex-direction: column;	
@@ -95,7 +107,7 @@ textarea {
 	align-items: center;
 }
 .url_output-container .textbox_label h2{
-	margin: 30px 0 5px 0;
+	margin: 30px 0 0 0;
 	width: 100%;
 }
 #url_output-area {
@@ -106,6 +118,13 @@ textarea {
 }
 #url_output-area:focus {
 	outline: none !important;
+}
+.label_underline {
+	height: 6px;
+	width: 50px;
+	background: #8686f1;
+	position: absolute;
+	bottom: 0px;
 }
 
 
