--- a/main.css
+++ b/main.css
@@ -115,6 +115,7 @@ textarea {
 	width: 900px;
 	max-width: 100%;
 	height: 400px;
+	padding: 10px;
 }
 #url_output-area:focus {
 	outline: none !important;
